--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <label for="time">Time</label>
 <select id="time" required>
-<option value="12:00">12:00 PM</option>
+<option value="12:00 PM">12:00 PM</option>
 </select>
 
 <button type="submit">Book Appointment</button>
@@ -68,24 +68,6 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 <div class="note">
 After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer email and to send your inspo pic 💖
 </div>
-</div>
-
-<div class="container" id="cancelContainer">
-<h2>Cancel Appointment</h2>
-<form id="cancelForm">
-<label for="cancelEmail">Email</label>
-<input type="email" id="cancelEmail" required>
-
-<label for="cancelDate">Date</label>
-<input type="text" id="cancelDate" placeholder="Select a date" required>
-
-<label for="cancelTime">Time</label>
-<select id="cancelTime" required>
-<option value="12:00">12 PM</option>
-</select>
-
-<button type="submit">Cancel Appointment</button>
-</form>
 </div>
 
 <footer>© 2025 PixelNailz</footer>
@@ -109,8 +91,7 @@ async function getBookedDates() {
   try {
     const response = await fetch(WEB_APP_URL + "?action=fetch");
     const data = await response.json();
-    const booked = data.bookings || [];
-    return booked.map(b => b.date); // list of booked dates
+    return data.booked || []; // backend returns booked: []
   } catch(e) {
     return [];
   }
@@ -122,14 +103,10 @@ async function initBookingDatepicker() {
   const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
   flatpickr("#date", {
     dateFormat:"Y-m-d",
-    enable: availableDates,
-    disable: bookedDates,
+    enable: availableDates
   });
 }
 initBookingDatepicker();
-
-// Initialize cancel datepicker (all allowed dates)
-flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates });
 
 // Booking form
 document.getElementById("bookingForm").addEventListener("submit", async function(e){
@@ -157,23 +134,6 @@ document.getElementById("bookingForm").addEventListener("submit", async function
   } catch {
     alert("Error booking appointment");
   }
-});
-
-// Cancel form
-document.getElementById("cancelForm").addEventListener("submit", function(e) {
-e.preventDefault();
-fetch(WEB_APP_URL, {
-method:"POST",
-body: JSON.stringify({
-action:"cancel",
-email: document.getElementById("cancelEmail").value,
-date: document.getElementById("cancelDate").value,
-time: "12:00 PM"
-})
-})
-.then(res => res.json())
-.then(data => alert(data.message))
-.catch(()=>alert("Error cancelling appointment"));
 });
 </script>
 </body>
