--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "YOUR_WEB_APP_URL"; // Replace with your Apps Script URL
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec";
 const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
 // Show length field only for Acrylic Full Set
@@ -102,64 +102,72 @@ document.getElementById("service").addEventListener("change", function() {
   else lengthField.classList.add("hidden");
 });
 
-// Initialize booking datepicker
+// Booking datepicker with booked dates disabled
 let bookingPicker;
 async function initBookingDatepicker() {
-  const response = await fetch(WEB_APP_URL + "?action=fetch");
-  const data = await response.json();
-  const bookedDates = (data.bookings || []).map(b => b.date);
+  try {
+    const response = await fetch(WEB_APP_URL + "?action=fetch");
+    const data = await response.json();
+    const bookedDates = (data.bookings || []).map(b => b.date);
 
-  const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
+    if(bookingPicker) bookingPicker.destroy();
 
-  if(bookingPicker) bookingPicker.destroy();
-
-  bookingPicker = flatpickr("#date", {
-    dateFormat: "Y-m-d",
-    enable: availableDates,
-    disable: bookedDates,
-    defaultDate: null,
-    minDate: "today"
-  });
+    bookingPicker = flatpickr("#date", {
+      dateFormat: "Y-m-d",
+      minDate: "today",
+      disableMobile: true,
+      enable: allowedDates,
+      disable: bookedDates
+    });
+  } catch(e) {
+    console.error(e);
+  }
 }
 initBookingDatepicker();
 
 // Cancel datepicker
-flatpickr("#cancelDate", { dateFormat: "Y-m-d", enable: allowedDates });
+flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates, disableMobile:true });
 
-// Booking submission
+// Booking form submission
 document.getElementById("bookingForm").addEventListener("submit", async function(e) {
   e.preventDefault();
   const bookingData = {
-    action: "book",
+    action:"book",
     name: document.getElementById("name").value,
     phone: document.getElementById("phone").value,
     email: document.getElementById("email").value,
     service: document.getElementById("service").value,
-    length: document.getElementById("service").value === "Acrylic Full Set" ? document.getElementById("length").value : "N/A",
+    length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
     date: document.getElementById("date").value,
     time: "12:00 PM"
   };
-
-  const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(bookingData) });
-  const data = await res.json();
-  alert(data.message);
-
-  if(data.status === "success") await initBookingDatepicker();
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(bookingData) });
+    const data = await res.json();
+    alert(data.message);
+    if(data.status === "success") await initBookingDatepicker();
+  } catch {
+    alert("Error booking appointment");
+  }
 });
 
-// Cancel submission
+// Cancel form submission
 document.getElementById("cancelForm").addEventListener("submit", async function(e) {
   e.preventDefault();
   const cancelData = {
-    action: "cancel",
+    action:"cancel",
     email: document.getElementById("cancelEmail").value,
     date: document.getElementById("cancelDate").value,
     time: "12:00 PM"
   };
-  const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(cancelData) });
-  const data = await res.json();
-  alert(data.message);
-  if(data.status === "success") await initBookingDatepicker();
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(cancelData) });
+    const data = await res.json();
+    alert(data.message);
+    if(data.status === "success") await initBookingDatepicker();
+  } catch {
+    alert("Error cancelling appointment");
+  }
 });
 </script>
 </body>
